Fixed some elements on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -448,7 +448,7 @@ ul .main-nav:nth-of-type(1) {
 
 #hero-container {
     padding-top: 10em;
-    margin-bottom: 20em;
+    margin-bottom: 18%;
 }
 #nina-img {
     display: none;
